RESOLVED FIXED315062
Pahawh Hmong text is misrendered because it takes the simple text path
https://bugs.webkit.org/show_bug.cgi?id=315062
Summary Pahawh Hmong text is misrendered because it takes the simple text path
Vitor Roriz
Reported 2026-05-18 17:18:15 PDT
The supplementary-character table in FontCascade::characterRangeCodePath does not include the Pahawh Hmong block (U+16B00 - U+16B8F), so runs containing those codepoints fall through to the simple text path which does not position Pahawh Hmong tone marks correctly. Therefore add the range to the table so Pahawh Hmong is shaped on the complex text path, which positions the marks correctly.
Attachments
Vitor Roriz
Comment 1 2026-05-18 17:18:16 PDT
Vitor Roriz
Comment 2 2026-05-18 17:22:13 PDT
EWS
Comment 3 2026-05-18 21:44:17 PDT
Committed 313458@main (091658231ee4): <https://commits.webkit.org/313458@main> Reviewed commits have been landed. Closing PR #65146 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.