Pahawh Hmong text is misrendered because it takes the simple text path https://bugs.webkit.org/show_bug.cgi?id=315062 rdar://167446860

Reviewed by Brent Fulgham.

The supplementary-character table in FontCascade::characterRangeCodePath does
not include the Pahawh Hmong block (U+16B00 - U+16B8F), so runs containing
those codepoints fall through to the simple text path which does not position
Pahawh Hmong tone marks correctly. Therefore add the range to the table so
Pahawh Hmong is shaped on the complex text path, which positions the marks
correctly.

* Source/WebCore/platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::characterRangeCodePath):
* Tools/TestWebKitAPI/Tests/WebCore/FontCascade.cpp:
(TestWebKitAPI::surrogatePair):
(TestWebKitAPI::testSupplementaryCodePath):
(TEST):

Canonical link: https://commits.webkit.org/313458@main