Tools/TestWebKitAPI/Tests/WebCore/FontCascade.cpp
@@ -38,6 +38,19 @@ static void testCodePath(char16_t codePoint, CodePath codePath)
     EXPECT_EQ(codePath, FontCascade::characterRangeCodePath(std::span<char16_t>(target))) << "target: " << static_cast<int>(target[0]);
 }
 
+static std::array<char16_t, 2> surrogatePair(char32_t supplementaryCharacter)
+{
+    char16_t high = 0xD800 + ((supplementaryCharacter - 0x10000) >> 10);
+    char16_t low = 0xDC00 + ((supplementaryCharacter - 0x10000) & 0x3FF);
+    return { high, low };
+}
+
+static void testSupplementaryCodePath(char32_t codePoint, CodePath codePath)
+{
+    auto target = surrogatePair(codePoint);
+    EXPECT_EQ(codePath, FontCascade::characterRangeCodePath(std::span<char16_t>(target))) << "target: U+" << std::hex << static_cast<uint32_t>(codePoint);
+}
+
 struct CodePathRange {
     char16_t start;
     char16_t end;
@@ -128,5 +141,15 @@ TEST(FontCascadeTest, characterRangeCodePath_NonSurrogates)
     testCodePathRange({ 0xFE00, 0xFE0F, CodePath::Complex });
     // U+FE20 through U+FE2F Combining half marks
     testCodePathRange({ 0xFE20, 0xFE2F, CodePath::Complex });
+}
+
+// Testing characterRangeCodePath for supplementary-plane codepoints
+TEST(FontCascadeTest, characterRangeCodePath_Surrogates)
+{
+    // U+16B00 through U+16B8F Pahawh Hmong
+    testSupplementaryCodePath(0x16B00, CodePath::Complex);
+    testSupplementaryCodePath(0x16B16, CodePath::Complex);
+    testSupplementaryCodePath(0x16B30, CodePath::Complex);
+    testSupplementaryCodePath(0x16B8F, CodePath::Complex);
 }
 }
